Commit to the Creative with Strings
String Manipulation exemples

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /GitTest/nbproject/private/
 /GitTest/build/
+/Database-Test/nbproject/private/
+/Database-Test/build/
+/CreativeWirhStrings/nbproject/private/
+/CreativeWithStrings/nbproject/private/
+/CreativeWithStrings/build/
